--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Exclude the FFmpeg binary
+assets/ffmpeg.exe
+
+# But keep the assets folder itself
+!assets/
+!assets/.gitkeep
